# lab-automation-playground

./: .gitignore  README.md  docker-compose.yaml
protocols/: simple-dilution.json
services/control-tower/: .dockerignore  Dockerfile  Makefile  main.py  pyproject.toml
services/control-tower/lib/: logger.py  utils.py
services/control-tower/plugins/riffyn/: config.py  watcher.py
services/control-tower/src/commands/: command.py  publisher.py
services/control-tower/src/config/: config.py
services/control-tower/src/routers/: commands.py
services/ot-builder/: .dockerignore  Dockerfile  Makefile  main.py  pyproject.toml
services/ot-builder/src/config/: config.py
services/ot-builder/src/protocols/: handler.py
services/ot-builder/src/protocols/SimpleDilution/: protocol.py  schema.py
services/ot-builder/src/routers/: runs.py
services/ot-builder/src/views/: error.html
services/ot-builder/src/views/runs/: get.html  list.html  simulate.html
