[tool.poetry]
name = "control-tower"
version = "0.1.0"
description = ""
authors = ["jace-ys <jaceys.tan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
swagger-client = {path = "vendor/riffyn-sdk"}
fastapi = "^0.61.1"
uvicorn = "^0.12.1"
redis = "^3.5.3"
structlog = "^20.1.0"

[tool.poetry.dev-dependencies]
pytest = "^6.1.1"
black = "^20.8b1"
isort = "^5.6.4"

[tool.pytest.ini_options]
filterwarnings = "ignore::DeprecationWarning"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
