[tool.poetry]
name = "ot-builder"
version = "0.1.0"
description = ""
authors = ["jace-ys <jaceys.tan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
opentrons = "^3.21.2"
fastapi = "^0.61.2"
uvicorn = "^0.12.2"
redis = "^3.5.3"
structlog = "^20.1.0"
Jinja2 = "^2.11.2"
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
black = "^20.8b1"
isort = "^5.6.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
